--- a/Page 2/Aurorii/index.html
+++ b/Page 2/Aurorii/index.html
@@ -165,6 +165,43 @@
             "A shrimp fried this rice? cool.",
             "Each quote represents a person, and this website is a really cramped DMV office.",
             "Close your eyes and pretend you're doing something productive.",
+            "Road work ahead? I sure hope it does.",
+            "Fre - shavacado",
+            "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
+            "This website doesn't use cookies because we ran out of sugar.",
+            "404 - Quote not Found",
+            "I'd rather be hated for who I am, rather than loved for who I'm not - Kurt Kobain",
+            "Why do we fall Master Bruce? So that we can learn to pick ourselves back up. - Alfred Pennyworth",
+            "Petah, the horse is here.",
+            "Shut up, Meg.",
+            "Giggity.",
+            "I'm so lonely... - Conquest",
+            "I'm [TITLECARD]",
+            "That when you if the cheese and it does that when it melt on your shirt and stuff. - Yeah",
+            "Eminem was a cool guy. - guy who thinks eminem died.",
+            "Mom's Spaghetti.",
+            "Alright, See ya. - Charlie",
+            "There's two wolves in you, you should get them out, it's probably not good for you.",
+            "SIX DOLLAR SHRIMP SPECIAL - Gianni Matragano",
+            "Machine, I will cut you down, splay the gore of your profane from across the stars, I will relish ending you, here, and, NOW! - Gabriel ULTRAKILL",
+            "I kicked an infant into a field goal. - Gabriel ULTRAKILL",
+            "Thy end is now! - Minos Prime, ULTRAKILL",
+            "Ergonomic Mice are better. - Loglot",
+            "Economic wood Veneers.",
+            "I didn't mean to hit her, that time. - Ruby Rose, Child Abuser.",
+            "Woaw",
+            "The lakers five. - Shannon Sharpe",
+            "I'm straight up coding my thing rn, and by my site? haha, let's just say I mean my website.",
+            "La familiaes todo - Hector Salamanca",
+            "My name is Walter Hartwell White. - Walter Hartwell White",
+            "There's an entire uneaten Long John Silver's Meal sitting in my car right now, it scares me.",
+            "Pootis - Heavy TF2",
+            "There's a Spy sappin' mah sentry! - Engineer TF2",
+            "Gentlemen, Syncronize your death watches. - Spy TF2",
+            "Wanna know how i got these scars? - The Joker",
+            "Wanna see a magic trick? I can make this pencil disappear... - The Joker",
+            "Wake up Samurai, we've got a city to burn... - Johnny Silverhand",
+            "Hey look, ramps! We can use these as ramps! - Sonic & Tails"
               ];
 
         const quoteElement = document.getElementById('quote');
