--- a/Page 2/Aurorii/index.html
+++ b/Page 2/Aurorii/index.html
@@ -202,6 +202,23 @@
             "Wanna see a magic trick? I can make this pencil disappear... - The Joker",
             "Wake up Samurai, we've got a city to burn... - Johnny Silverhand",
             "Hey look, ramps! We can use these as ramps! - Sonic & Tails"
+            "this is a bucket dear god"
+            "jimmy's mom - Carl Wheezer",
+            "I'm going to ULTRAKILL you machine - Gabriel ULTRAKILL",
+            "I'M GOING TO BLOW UP THE OCEAN! - Mister Torgue High Five Flexington",
+            "You can't just shoot a hole into the surface of mars. - Samuel Hayden, moments before being proved wrong.",
+            "When the Smoke clears, you can see the sky again.  There will be the chopped off heads of the leviathan. - MF DOOM",
+            "Don't buy a 50$ Phone, - Guy who bought a 50$ phone.",
+            "Don't do death, that stuff kills you. - Dead guy",
+            "Where am I? - Guy we kidnapped for a quote.",
+            "Placeholder Quote",
+            "Don't do crime, do mega crime instead! - Mega Crime Enjoyer",
+            "When the if you yeah",
+            "Try Aurorii! Oh, wait.",
+            "Psst, check out Loglot on Github.",
+            "Hey, it's me, Goku! - Goku",
+            "Check out my perfect form, it's perfect. - Perfect Cell.",
+            "Nobody expects the spanish inquisition! - The Spanish Inquisition "
               ];
 
         const quoteElement = document.getElementById('quote');
