--- a/Page 2/Aurorii/index.html
+++ b/Page 2/Aurorii/index.html
@@ -201,9 +201,9 @@
             "Wanna know how i got these scars? - The Joker",
             "Wanna see a magic trick? I can make this pencil disappear... - The Joker",
             "Wake up Samurai, we've got a city to burn... - Johnny Silverhand",
-            "Hey look, ramps! We can use these as ramps! - Sonic & Tails"
-            "this is a bucket dear god"
-            "jimmy's mom - Carl Wheezer",
+            "Hey look, ramps! We can use these as ramps! - Sonic & Tails",
+            "This is a bucket, Dear god",
+            "Jimmy's mom - Carl Wheezer",
             "I'm going to ULTRAKILL you machine - Gabriel ULTRAKILL",
             "I'M GOING TO BLOW UP THE OCEAN! - Mister Torgue High Five Flexington",
             "You can't just shoot a hole into the surface of mars. - Samuel Hayden, moments before being proved wrong.",
@@ -218,7 +218,18 @@
             "Psst, check out Loglot on Github.",
             "Hey, it's me, Goku! - Goku",
             "Check out my perfect form, it's perfect. - Perfect Cell.",
-            "Nobody expects the spanish inquisition! - The Spanish Inquisition "
+            "Nobody expects the spanish inquisition! - The Spanish Inquisition ",
+            "Haha, One! - Sonic 06' Snapcube Dub.",
+            "Oh my god, they killed Kenny! You Bastards!",
+            "The Stash...",
+            "Autobots, Transform and Rollout. - Optimus Prime.",
+            "This site ain't big enough fer the two of us.",
+            "| || || |_",
+            "https://www.youtube.com/watch?v=dQw4w9WgXcQ",
+            "My bad Nardy. - Tyler, The Creator",
+            "Listen to Tyler the Creator.",
+            "Infinity is Nothing - Loglot",
+            "Infinty is everything - Icysarcasm"
               ];
 
         const quoteElement = document.getElementById('quote');
@@ -230,7 +241,7 @@
 
             setTimeout(() => {
                 quoteElement.classList.remove('visible');
-            }, 3000); // Quote stays visible for 3 seconds
+            }, 5000); // Quote stays visible for 5 seconds
         }
 
         setInterval(showRandomQuote, 8000); // Show a new quote every 8 seconds
