--- a/Page 2/Aurorii/index.html
+++ b/Page 2/Aurorii/index.html
@@ -229,7 +229,9 @@
             "My bad Nardy. - Tyler, The Creator",
             "Listen to Tyler the Creator.",
             "Infinity is Nothing - Loglot",
-            "Infinty is everything - Icysarcasm"
+            "Infinty is everything - Icysarcasm",
+            "Jolly good show! - Pops Maellard",
+            "WOAAAAAAAH - Mordecai and Rigby"
               ];
 
         const quoteElement = document.getElementById('quote');
@@ -241,10 +243,10 @@
 
             setTimeout(() => {
                 quoteElement.classList.remove('visible');
-            }, 5000); // Quote stays visible for 5 seconds
+            }, 10000); // Quote stays visible for 10 seconds
         }
 
-        setInterval(showRandomQuote, 8000); // Show a new quote every 8 seconds
+        setInterval(showRandomQuote, 4000); // Show a new quote every 4 seconds
     </script>
 </body>
 </html>
