--- a/Page 2/index.html
+++ b/Page 2/index.html
@@ -120,6 +120,12 @@
             This one has quotes.
             </div>
         </a>
+         <a href="Flowii/" class="floating-button" style="--hover-color: #3cb371;">
+            <div class="tooltip">
+            <strong>Flowii</strong><br>
+            Go with the Flow.
+            </div>
+        </a>
 
 
     </div>
