--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <a href="Page 2/" class="floating-button" style="--hover-color: #c91a1a;">
             <div class="tooltip">
             <strong>Page 2</strong><br>
-            More to See.
+            Next
             </div>
         </a>
     </div>
