--- a/Page 2/index.html
+++ b/Page 2/index.html
@@ -99,7 +99,7 @@
         <a href="javascript:history.back()" class="floating-button" style="--hover-color: #3cb371;">
             <div class="tooltip">
             <strong>Page 1</strong><br>
-            Back to Basics.
+            Back
             </div>
         </a>
         <a href="Bounceii/" class="floating-button" style="--hover-color: #3cb371;">
